fixed extra spacing in booking card for bookings#index

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -307,7 +307,7 @@
   cursor: pointer;
   transition-duration: 0.25s;
   overflow: hidden;
-  margin-top: 50px;
+  margin-top: 16px;
   text-transform: uppercase;
   font-size: 12px;
 }
